--- a/src/index.css
+++ b/src/index.css
@@ -264,6 +264,22 @@
     background-color: rgba(160, 174, 192, 0.5);
     border-radius: 2px;
   }
+
+  .scrollbar-hide {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+
+  .line-clamp-2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+  }
 }
 
 /* Animation keyframes */
